# PDF-to-AudioBook-ConverterApp

./: LICENSE  README.md
PDF_to_AudioBook_App/: CMakeLists.txt  main.cpp
python-server-code/: PdfServer.py
